Split models into separate package

--- a/oppm.cfg
+++ b/oppm.cfg
@@ -11,12 +11,25 @@
         dependencies = {          
         },
         name = "pbprint",--This is for "oppm info"
-        description = "3D Printing Utils and Models",--This is for "oppm info"
+        description = "3D Printing Utils",--This is for "oppm info"
         authors = "paulbatum",--This is for "oppm info"
         note = "",
         hidden = false, -- Add this optional line to make your package not visible in "oppm list", useful for custom dependency libraries
         repo="tree/master/somefolder" --Used by the website. This is where the package will link to on the website
-      }
+      },
+      ["pbmodels"] = {
+        files = {
+          [":master/pbmodels"] = "/pbmodels",--"/" means the file will be placed inside the folder the user specified, defaults to /usr
+        },
+        dependencies = {          
+        },
+        name = "pbmodels",--This is for "oppm info"
+        description = "3D Printing Models",--This is for "oppm info"
+        authors = "paulbatum",--This is for "oppm info"
+        note = "",
+        hidden = false, -- Add this optional line to make your package not visible in "oppm list", useful for custom dependency libraries
+        repo="tree/master/somefolder" --Used by the website. This is where the package will link to on the website
+      },
     }
   }
 }
