--- a/oppm.cfg
+++ b/oppm.cfg
@@ -4,6 +4,19 @@
   --Additional repositories and packages go here, for correct package syntax, check https://github.com/OpenPrograms/Vexatos-Programs/blob/master/op-manager/etc/example-config.cfg
   repos={
     ["paulbatum/OpenComputers-Programs"] = {
+      ["pbupdate"] = {
+        files = {
+          [":master/updatecfg.lua"] = "//usr/bin",--"/" means the file will be placed inside the folder the user specified, defaults to /usr
+        },
+        dependencies = {          
+        },
+        name = "pbupdate",--This is for "oppm info"
+        description = "Updater for oppm.cfg",--This is for "oppm info"
+        authors = "paulbatum",--This is for "oppm info"
+        note = "",
+        hidden = false, -- Add this optional line to make your package not visible in "oppm list", useful for custom dependency libraries
+        repo="tree/master/somefolder" --Used by the website. This is where the package will link to on the website
+      },
       ["pbprint"] = {
         files = {
           [":master/pbprint"] = "/pbprint",--"/" means the file will be placed inside the folder the user specified, defaults to /usr
