trying to fix cfg

--- a/oppm.cfg
+++ b/oppm.cfg
@@ -6,7 +6,7 @@
     ["paulbatum/OpenComputers-Programs"] = {
       ["pbupdate"] = {
         files = {
-          [":master/updatecfg.lua"] = "//usr/bin",--"/" means the file will be placed inside the folder the user specified, defaults to /usr
+          [":master/updatecfg.lua"] = "/bin",--"/" means the file will be placed inside the folder the user specified, defaults to /usr
         },
         dependencies = {          
         },
