--- a/oppm.cfg
+++ b/oppm.cfg
@@ -13,7 +13,7 @@
         name = "pbupdate",--This is for "oppm info"
         description = "Updater for oppm.cfg",--This is for "oppm info"
         authors = "paulbatum",--This is for "oppm info"
-        note = "test change",
+        note = "test change 2",
         hidden = false, -- Add this optional line to make your package not visible in "oppm list", useful for custom dependency libraries
         repo="tree/master/somefolder" --Used by the website. This is where the package will link to on the website
       },
